--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
 .body {
+  justify-content: center;
+  align-items: center;
   background-color: pink;
-  margin: 5%;
+  /* margin: 5%; */
+  max-width: 100%;
+  /* margin: 0; */
+  padding: 0;
+  /* overflow: hidden; */
+  /* position: fixed; */
+}
+.html {
+  max-width: 90%;
 }
 
 a:hover {
